--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.5",
     "passport": "^0.4.0",
