--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
+    "method-override": "^2.3.10",
     "mongoose": "^4.13.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
